bugfix section mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -99,7 +99,7 @@ a{
         .intro{
             text-align: center;
             margin-top: 6.5em;
-            h1{
+            .intro_first_content{
                 font-size: 4.5em;
                 letter-spacing: -4px;
                 text-shadow: -1px 1px 1px $black;
